--- a/development.ini
+++ b/development.ini
@@ -16,6 +16,7 @@ pyramid.includes =
     pyramid_tm
     pyramid_beaker
 
+#DATABASE settings#########################################################
 #sqlalchemy.url = sqlite:///%(here)s/longitudinal_register.sqlite
 sqlalchemy.url = postgresql+psycopg2://neo:whatisthematrix@localhost/longitudinal_register 
 
