--- a/production.ini
+++ b/production.ini
@@ -14,7 +14,21 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_tm
 
-sqlalchemy.url = sqlite:///%(here)s/longitudinal_register.sqlite
+#DATABASE settings#########################################################
+#sqlalchemy.url = sqlite:///%(here)s/longitudinal_register.sqlite
+sqlalchemy.url = postgresql+psycopg2://neo:whatisthematrix@localhost/longitudinal_register 
+
+#MAKO################
+mako.directories = longitudinal_register:templates
+
+#pyramid_beaker settings
+session.type = file
+session.data_dir = %(here)s/data/sessions/data
+session.lock_dir = %(here)s/data/sessions/lock
+session.key = patientskey
+session.secret = patientssecret
+session.cookie_on_exception = true
+
 
 [server:main]
 use = egg:waitress#main
